# test_Cube

./: .gitignore  CMakeLists.txt  CubeHelper.h  CubeSolver.cpp  CubeSolver.h  Cube_3x3x3.cpp  Cube_3x3x3.h  Makefile  Period.h  README.md  main.cpp  test_Cube.sln  test_PLL.cpp  test_PLL.pro  test_PLL.vcxproj  test_Period.cpp  test_Period.pro  test_Period.vcxproj  test_cube.pro  test_solve.cpp  test_solve.vcxproj
src/: CMakeLists.txt  Cube.cpp  Cube.h  CubeHelper.h  CubeSolver.cpp  CubeSolver.h  Period.h  Sequence.cpp  Sequence.h  SequenceOrder.h
tests/: CMakeLists.txt  test_PLL.cpp  test_find_Jb.cpp  test_find_Jb_3faces_RUF.cpp  test_find_OLL.cpp  test_find_PLL.cpp  test_find_Period.cpp  test_find_U_PLL.cpp  test_find_edge_PLL.cpp  test_find_order.cpp  test_is_corner_placed.cpp  test_sequence.cpp
